// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Plugins - Minify > CSS > custom css minimizer 1`] = `
[
  SwcJsMinimizerRspackPlugin {
    "_args": [
      {
        "extractComments": false,
        "minimizerOptions": {
          "compress": {
            "comparisons": false,
            "ecma": 2015,
            "inline": 2,
            "join_vars": false,
            "negate_iife": false,
            "side_effects": false,
            "toplevel": true,
          },
          "format": {
            "asciiOnly": false,
            "comments": false,
            "keep_quoted_props": true,
          },
          "mangle": {
            "toplevel": true,
          },
        },
      },
    ],
    "affectedHooks": "compilation",
    "name": "SwcJsMinimizerRspackPlugin",
  },
  CssMinimizerPlugin {
    "options": {
      "exclude": undefined,
      "include": undefined,
      "minimizer": {
        "implementation": [Function],
        "options": {
          "level": {
            "1": {
              "roundingPrecision": "all=3,px=5",
            },
          },
        },
      },
      "parallel": true,
      "test": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
      "warningsFilter": [Function],
    },
  },
]
`;

exports[`Plugins - Minify > defaults 1`] = `
[
  SwcJsMinimizerRspackPlugin {
    "_args": [
      {
        "extractComments": false,
        "minimizerOptions": {
          "compress": {
            "comparisons": false,
            "ecma": 2015,
            "inline": 2,
            "join_vars": false,
            "negate_iife": false,
            "side_effects": false,
            "toplevel": true,
          },
          "format": {
            "asciiOnly": false,
            "comments": false,
            "keep_quoted_props": true,
          },
          "mangle": {
            "toplevel": true,
          },
        },
      },
    ],
    "affectedHooks": "compilation",
    "name": "SwcJsMinimizerRspackPlugin",
  },
  CssMinimizerPlugin {
    "options": {
      "exclude": undefined,
      "include": undefined,
      "minimizer": {
        "implementation": [Function],
        "options": {
          "preset": [
            "default",
            {
              "mergeLonghand": false,
            },
          ],
        },
      },
      "parallel": true,
      "test": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
      "warningsFilter": [Function],
    },
  },
]
`;

exports[`Plugins - Minify > minify.compress 1`] = `
[
  SwcJsMinimizerRspackPlugin {
    "_args": [
      {
        "extractComments": false,
        "minimizerOptions": {
          "compress": true,
          "format": {
            "asciiOnly": false,
            "comments": false,
            "keep_quoted_props": true,
          },
          "mangle": {
            "toplevel": true,
          },
        },
      },
    ],
    "affectedHooks": "compilation",
    "name": "SwcJsMinimizerRspackPlugin",
  },
  CssMinimizerPlugin {
    "options": {
      "exclude": undefined,
      "include": undefined,
      "minimizer": {
        "implementation": [Function],
        "options": {
          "preset": [
            "default",
            {
              "mergeLonghand": false,
            },
          ],
        },
      },
      "parallel": true,
      "test": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
      "warningsFilter": [Function],
    },
  },
]
`;

exports[`Plugins - Minify > minify.compress 2`] = `
[
  SwcJsMinimizerRspackPlugin {
    "_args": [
      {
        "extractComments": false,
        "minimizerOptions": {
          "compress": false,
          "format": {
            "asciiOnly": false,
            "comments": false,
            "keep_quoted_props": true,
          },
          "mangle": {
            "toplevel": true,
          },
        },
      },
    ],
    "affectedHooks": "compilation",
    "name": "SwcJsMinimizerRspackPlugin",
  },
  CssMinimizerPlugin {
    "options": {
      "exclude": undefined,
      "include": undefined,
      "minimizer": {
        "implementation": [Function],
        "options": {
          "preset": [
            "default",
            {
              "mergeLonghand": false,
            },
          ],
        },
      },
      "parallel": true,
      "test": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
      "warningsFilter": [Function],
    },
  },
]
`;

exports[`Plugins - Minify > minify.compress 3`] = `
[
  SwcJsMinimizerRspackPlugin {
    "_args": [
      {
        "extractComments": false,
        "minimizerOptions": {
          "compress": {
            "comparisons": false,
            "dead_code": true,
            "ecma": 2015,
            "expression": false,
            "inline": 1,
            "join_vars": false,
            "negate_iife": true,
            "pure_funcs": [],
            "side_effects": false,
            "toplevel": true,
          },
          "format": {
            "asciiOnly": false,
            "comments": false,
            "keep_quoted_props": true,
          },
          "mangle": {
            "toplevel": true,
          },
        },
      },
    ],
    "affectedHooks": "compilation",
    "name": "SwcJsMinimizerRspackPlugin",
  },
  CssMinimizerPlugin {
    "options": {
      "exclude": undefined,
      "include": undefined,
      "minimizer": {
        "implementation": [Function],
        "options": {
          "preset": [
            "default",
            {
              "mergeLonghand": false,
            },
          ],
        },
      },
      "parallel": true,
      "test": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
      "warningsFilter": [Function],
    },
  },
]
`;

exports[`Plugins - Minify > minify.extractComments 1`] = `
[
  SwcJsMinimizerRspackPlugin {
    "_args": [
      {
        "extractComments": {},
        "minimizerOptions": {
          "compress": {
            "comparisons": false,
            "ecma": 2015,
            "inline": 2,
            "join_vars": false,
            "negate_iife": false,
            "side_effects": false,
            "toplevel": true,
          },
          "format": {
            "asciiOnly": false,
            "comments": false,
            "keep_quoted_props": true,
          },
          "mangle": {
            "toplevel": true,
          },
        },
      },
    ],
    "affectedHooks": "compilation",
    "name": "SwcJsMinimizerRspackPlugin",
  },
  CssMinimizerPlugin {
    "options": {
      "exclude": undefined,
      "include": undefined,
      "minimizer": {
        "implementation": [Function],
        "options": {
          "preset": [
            "default",
            {
              "mergeLonghand": false,
            },
          ],
        },
      },
      "parallel": true,
      "test": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
      "warningsFilter": [Function],
    },
  },
]
`;

exports[`Plugins - Minify > minify.extractComments 2`] = `
[
  SwcJsMinimizerRspackPlugin {
    "_args": [
      {
        "extractComments": false,
        "minimizerOptions": {
          "compress": {
            "comparisons": false,
            "ecma": 2015,
            "inline": 2,
            "join_vars": false,
            "negate_iife": false,
            "side_effects": false,
            "toplevel": true,
          },
          "format": {
            "asciiOnly": false,
            "comments": false,
            "keep_quoted_props": true,
          },
          "mangle": {
            "toplevel": true,
          },
        },
      },
    ],
    "affectedHooks": "compilation",
    "name": "SwcJsMinimizerRspackPlugin",
  },
  CssMinimizerPlugin {
    "options": {
      "exclude": undefined,
      "include": undefined,
      "minimizer": {
        "implementation": [Function],
        "options": {
          "preset": [
            "default",
            {
              "mergeLonghand": false,
            },
          ],
        },
      },
      "parallel": true,
      "test": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
      "warningsFilter": [Function],
    },
  },
]
`;

exports[`Plugins - Minify > minify.extractComments 3`] = `
[
  SwcJsMinimizerRspackPlugin {
    "_args": [
      {
        "extractComments": /@license/,
        "minimizerOptions": {
          "compress": {
            "comparisons": false,
            "ecma": 2015,
            "inline": 2,
            "join_vars": false,
            "negate_iife": false,
            "side_effects": false,
            "toplevel": true,
          },
          "format": {
            "asciiOnly": false,
            "comments": false,
            "keep_quoted_props": true,
          },
          "mangle": {
            "toplevel": true,
          },
        },
      },
    ],
    "affectedHooks": "compilation",
    "name": "SwcJsMinimizerRspackPlugin",
  },
  CssMinimizerPlugin {
    "options": {
      "exclude": undefined,
      "include": undefined,
      "minimizer": {
        "implementation": [Function],
        "options": {
          "preset": [
            "default",
            {
              "mergeLonghand": false,
            },
          ],
        },
      },
      "parallel": true,
      "test": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
      "warningsFilter": [Function],
    },
  },
]
`;

exports[`Plugins - Minify > minify.extractComments 4`] = `
[
  SwcJsMinimizerRspackPlugin {
    "_args": [
      {
        "extractComments": {
          "banner": "foo",
          "condition": /\\^@keep/,
        },
        "minimizerOptions": {
          "compress": {
            "comparisons": false,
            "ecma": 2015,
            "inline": 2,
            "join_vars": false,
            "negate_iife": false,
            "side_effects": false,
            "toplevel": true,
          },
          "format": {
            "asciiOnly": false,
            "comments": false,
            "keep_quoted_props": true,
          },
          "mangle": {
            "toplevel": true,
          },
        },
      },
    ],
    "affectedHooks": "compilation",
    "name": "SwcJsMinimizerRspackPlugin",
  },
  CssMinimizerPlugin {
    "options": {
      "exclude": undefined,
      "include": undefined,
      "minimizer": {
        "implementation": [Function],
        "options": {
          "preset": [
            "default",
            {
              "mergeLonghand": false,
            },
          ],
        },
      },
      "parallel": true,
      "test": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
      "warningsFilter": [Function],
    },
  },
]
`;

exports[`Plugins - Minify > minify.extractComments 5`] = `
[
  SwcJsMinimizerRspackPlugin {
    "_args": [
      {
        "extractComments": {
          "banner": false,
          "condition": false,
        },
        "minimizerOptions": {
          "compress": {
            "comparisons": false,
            "ecma": 2015,
            "inline": 2,
            "join_vars": false,
            "negate_iife": false,
            "side_effects": false,
            "toplevel": true,
          },
          "format": {
            "asciiOnly": false,
            "comments": false,
            "keep_quoted_props": true,
          },
          "mangle": {
            "toplevel": true,
          },
        },
      },
    ],
    "affectedHooks": "compilation",
    "name": "SwcJsMinimizerRspackPlugin",
  },
  CssMinimizerPlugin {
    "options": {
      "exclude": undefined,
      "include": undefined,
      "minimizer": {
        "implementation": [Function],
        "options": {
          "preset": [
            "default",
            {
              "mergeLonghand": false,
            },
          ],
        },
      },
      "parallel": true,
      "test": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
      "warningsFilter": [Function],
    },
  },
]
`;

exports[`Plugins - Minify > minify.format 1`] = `
[
  SwcJsMinimizerRspackPlugin {
    "_args": [
      {
        "extractComments": false,
        "minimizerOptions": {
          "compress": {
            "comparisons": false,
            "ecma": 2015,
            "inline": 2,
            "join_vars": false,
            "negate_iife": false,
            "side_effects": false,
            "toplevel": true,
          },
          "format": {
            "asciiOnly": false,
            "comments": false,
            "keep_quoted_props": true,
          },
          "mangle": {
            "toplevel": true,
          },
        },
      },
    ],
    "affectedHooks": "compilation",
    "name": "SwcJsMinimizerRspackPlugin",
  },
  CssMinimizerPlugin {
    "options": {
      "exclude": undefined,
      "include": undefined,
      "minimizer": {
        "implementation": [Function],
        "options": {
          "preset": [
            "default",
            {
              "mergeLonghand": false,
            },
          ],
        },
      },
      "parallel": true,
      "test": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
      "warningsFilter": [Function],
    },
  },
]
`;

exports[`Plugins - Minify > minify.format 2`] = `
[
  SwcJsMinimizerRspackPlugin {
    "_args": [
      {
        "extractComments": false,
        "minimizerOptions": {
          "compress": {
            "comparisons": false,
            "ecma": 2015,
            "inline": 2,
            "join_vars": false,
            "negate_iife": false,
            "side_effects": false,
            "toplevel": true,
          },
          "format": {
            "asciiOnly": false,
            "ascii_only": true,
            "comments": false,
            "keep_quoted_props": true,
            "preserve_annotations": true,
          },
          "mangle": {
            "toplevel": true,
          },
        },
      },
    ],
    "affectedHooks": "compilation",
    "name": "SwcJsMinimizerRspackPlugin",
  },
  CssMinimizerPlugin {
    "options": {
      "exclude": undefined,
      "include": undefined,
      "minimizer": {
        "implementation": [Function],
        "options": {
          "preset": [
            "default",
            {
              "mergeLonghand": false,
            },
          ],
        },
      },
      "parallel": true,
      "test": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
      "warningsFilter": [Function],
    },
  },
]
`;

exports[`Plugins - Minify > minify.mangle 1`] = `
[
  SwcJsMinimizerRspackPlugin {
    "_args": [
      {
        "extractComments": false,
        "minimizerOptions": {
          "compress": {
            "comparisons": false,
            "ecma": 2015,
            "inline": 2,
            "join_vars": false,
            "negate_iife": false,
            "side_effects": false,
            "toplevel": true,
          },
          "format": {
            "asciiOnly": false,
            "comments": false,
            "keep_quoted_props": true,
          },
          "mangle": true,
        },
      },
    ],
    "affectedHooks": "compilation",
    "name": "SwcJsMinimizerRspackPlugin",
  },
  CssMinimizerPlugin {
    "options": {
      "exclude": undefined,
      "include": undefined,
      "minimizer": {
        "implementation": [Function],
        "options": {
          "preset": [
            "default",
            {
              "mergeLonghand": false,
            },
          ],
        },
      },
      "parallel": true,
      "test": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
      "warningsFilter": [Function],
    },
  },
]
`;

exports[`Plugins - Minify > minify.mangle 2`] = `
[
  SwcJsMinimizerRspackPlugin {
    "_args": [
      {
        "extractComments": false,
        "minimizerOptions": {
          "compress": {
            "comparisons": false,
            "ecma": 2015,
            "inline": 2,
            "join_vars": false,
            "negate_iife": false,
            "side_effects": false,
            "toplevel": true,
          },
          "format": {
            "asciiOnly": false,
            "comments": false,
            "keep_quoted_props": true,
          },
          "mangle": false,
        },
      },
    ],
    "affectedHooks": "compilation",
    "name": "SwcJsMinimizerRspackPlugin",
  },
  CssMinimizerPlugin {
    "options": {
      "exclude": undefined,
      "include": undefined,
      "minimizer": {
        "implementation": [Function],
        "options": {
          "preset": [
            "default",
            {
              "mergeLonghand": false,
            },
          ],
        },
      },
      "parallel": true,
      "test": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
      "warningsFilter": [Function],
    },
  },
]
`;

exports[`Plugins - Minify > minify.mangle 3`] = `
[
  SwcJsMinimizerRspackPlugin {
    "_args": [
      {
        "extractComments": false,
        "minimizerOptions": {
          "compress": {
            "comparisons": false,
            "ecma": 2015,
            "inline": 2,
            "join_vars": false,
            "negate_iife": false,
            "side_effects": false,
            "toplevel": true,
          },
          "format": {
            "asciiOnly": false,
            "comments": false,
            "keep_quoted_props": true,
          },
          "mangle": {
            "props": {},
            "reserved": [
              "foo",
              "lynx",
            ],
            "toplevel": true,
          },
        },
      },
    ],
    "affectedHooks": "compilation",
    "name": "SwcJsMinimizerRspackPlugin",
  },
  CssMinimizerPlugin {
    "options": {
      "exclude": undefined,
      "include": undefined,
      "minimizer": {
        "implementation": [Function],
        "options": {
          "preset": [
            "default",
            {
              "mergeLonghand": false,
            },
          ],
        },
      },
      "parallel": true,
      "test": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
      "warningsFilter": [Function],
    },
  },
]
`;
